修复bug